# Linux_C

./: .~+基础课件和源代码（有作业）.docx  README.md  c笔记.md  msp432  test  test.c
.git-old/: config  index  packed-refs
.git-old/logs/: HEAD
Linux_CPP/: 3_解析xml字符串.cpp  temp.cpp
Linux_CPP/10_字符数组/: 12_1_c字符串.cpp
Linux_CPP/11_结构体/: 13_1_结构体指针.cpp  13_2_结构体数组.cpp  13_3_结构体嵌入数组.cpp  13_4_结构体嵌套结构体.cpp  13_5_结构体中的指针.cpp
Linux_CPP/12_引用/: 14_1_引用的基本概念.cpp  14_2_引用用于函数的参数  14_2_引用用于函数的参数.cpp
Linux_CPP/1_C++输出数据/: 1_helloworld.cpp  2_使用变量.cpp  3_使用常量.cpp  4_输入数据.cpp
Linux_CPP/20_数据结构/: 1_静态线性表.cpp  1_静态顺序表.cpp  1_静态顺序表exam.cpp
Linux_CPP/21_类与对象/: 10_类的静态成员.cpp  11_简单对象模型.cpp  12_友元.cpp  13_友元成员函数.cpp  1_从结构体到类.cpp  2_类的访问权限.cpp  3_简单使用类.cpp  4_构造函数与析构函数.cpp  5_拷贝构造函数.cpp  6_浅拷贝与深拷贝.cpp  (+4 more)
Part10_工程管理cmake/: Cmake.md
Part10_工程管理cmake/exam4_制作库文件/: CMakeLists.txt
Part10_工程管理cmake/exam5_链接静态库/: CMakeLists.txt
Part11_常用输入输出/: 7_A+B.c
Part11_数据结构/: 数据结构.md
Part12_常用输入输出/: 1_A+B.c  2_A+B.c  3_A+B.c  4_A+B.c  5_A+B.c  6_A+B.c
Part14_进程管理/: 2_父子进程.c  fork
Part16_ARM结构与接口/: 1_判断字节序  1_判断字节序.c
Part3_输入输出/: 输入输出练习1_求水分子个数.c  输入输出练习2_三角形面积.c  输入输出练习3_求方程的根.c
Part4_流程控制/: 1_投资问题.c  2_终端读数.c  3_斐波那契.c  4_九九乘法表.c  5_百钱买百鸡.c  6_水仙花数.c  7_质数.c  8_ABC.c  流程控制.c
Part5_数组/: 1_fibonacci.c  2_冒泡排序.c  3_选择排序.c  4_矩阵转置.c  5_单词计数.c
Part6_指针/: 1_指针与变量.c  2_指针与数组.c  3_指针与二维数组.c
Part7_函数/: 1_指针传参  1_指针传参.c  2_递归阶乘  2_递归阶乘.c  3_递归斐波那契  3_递归斐波那契.c  4_指针函数.c  5_函数指针.c
Part8_构造类型/: 1_struct.c  2_union.c  3_enum.c
Part9_动态内存管理/: 1_malloc  1_malloc.c
ftxui-starter/: CMakeLists.txt
(+232 files in other folders)
