cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
project(hello)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/LIB)
#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build)
#add_executable(hello ${SRC})
add_library(calc STATIC ${SRC})
